change accordion collapsed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <span class="menu-lines " id="rotats2"></span>
                     </label>
                 </div>
-                <ul id="nav-name" class="list-unstyled nav-link d-flex">
+                <ul id="nav-name" class="list-unstyled nav-link d-flex align-items-center">
                     <li class="pt-27 pl-23">
                         <a href="#"><img class="logo" src="/assets/image/svg/header-logo.svg" alt="header-logo">
                         </a>
@@ -156,13 +156,13 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header">
                                 <button
-                                    class="accordion-button font-family-primary fw-semibold text-small lh-19 text-white"
+                                    class="accordion-button collapsed font-family-primary fw-semibold text-small lh-19 text-white"
                                     type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                                     aria-expanded="true" aria-controls="collapseOne">
                                     Leo sed aliquam odio a dictumst est convallis eu hendrerit. Viverra cras.
                                 </button>
                             </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse show"
+                            <div id="collapseOne" class="accordion-collapse collapse"
                                 data-bs-parent="#accordionExample">
                                 <div
                                     class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
@@ -176,13 +176,13 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header">
                                 <button
-                                    class="accordion-button collapsed font-family-primary fw-semibold text-small lh-19 text-white"
+                                    class="accordion-button collaps ed font-family-primary fw-semibold text-small lh-19 text-white"
                                     type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                     aria-expanded="false" aria-controls="collapseTwo">
                                     Pellentesque mauris, est at magna. Vel curabitur amet sit id. Enim.
                                 </button>
                             </h2>
-                            <div id="collapseTwo" class="accordion-collapse collapse"
+                            <div id="collapseTwo" class="accordion-collapse collapse show"
                                 data-bs-parent="#accordionExample">
                                 <div
                                     class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
