add parent reference on accordion

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
     </section>
     <!--**** accordion ****-->
-    <footer class="section-3 d-flex align-items-center justify-content-center bg-img-3">
+    <footer class="faq d-flex align-items-center justify-content-center bg-img-3">
         <div class="container max-w-1140">
             <div class="d-flex align-items-center justify-content-center justify-content-lg-start">
                 <div class="font-family-primary fw-900 text-xl lh-109 text-white mt-63">FAQs</div>
