--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
 <body class="bg-black-wash">
     <!--**** header ****-->
     <header class="bg-img min-v-100">
-        <nav class="d-flex align-items-center nav-bar bg-dark-black">
-            <div class="container">
+        <nav class="d-flex align-items-center nav-bar bg-dark-black py-15">
+            <div class="container max-w-1140">
                 <div class="d-flex align-items-center justify-content-between">
                     <img class="d-lg-none" src="/assets/image/svg/header-logo.svg" alt="header-logo">
-                    <label onclick="navbarbtn()" class="z-5 d-lg-none">
+                    <label onclick="navbarbtn()" class="z-5 d-lg-none cursor">
                         <span class="menu-lines " id="rotats"></span>
                         <span class="menu-lines " id="transparent"></span>
                         <span class="menu-lines " id="rotats2"></span>
                     </label>
                 </div>
-                <ul id="nav-name" class="list-unstyled nav-link d-flex align-items-center">
-                    <li class="pt-27 pl-23">
+                <ul id="nav-name" class="list-unstyled nav-link d-flex align-items-center mb-0">
+                    <li class="pl-23">
                         <a href="#"><img class="logo" src="/assets/image/svg/header-logo.svg" alt="header-logo">
                         </a>
                     </li>
                     <li>
-                        <ul class="d-flex list-unstyled gap-39 pt-31 align-items-center">
+                        <ul class="d-flex list-unstyled gap-39 align-items-center">
                             <li><a class="text-decoration-none font-family-primary text-white text-sm fw-normal lh-19 navbar-link"
                                     href="#">HOME</a>
                             </li>
@@ -49,7 +49,7 @@
                         </ul>
                     </li>
                     <li>
-                        <ul class="list-unstyled d-flex gap-20 pt-26">
+                        <ul class="list-unstyled d-flex gap-20">
                             <li><a href="https://x.com/?lang=en" target="_blank"><img class="icon"
                                         src="/assets/image/svg/twitter-svg.svg" alt="twitter-svg"></a></li>
                             <li><a href="http://web.telegram.org/k/" target="_blank"><img class="icon"
@@ -65,13 +65,13 @@
             </div>
         </nav>
         <div class="container max-w-1140">
-            <div class="row positi on-relative">
+            <div class="row">
                 <div class=" col-12 col-lg-6 position-relative">
                     <img class="header-img-1" src="/assets/image/png/header-img-1.png" alt="header-img-1">
                 </div>
-                <div class=" col-12 col-lg-6 mt-133">
+                <div class=" col-12 col-lg-6 pt-133">
                     <div class="d-flex justify-content-center justify-content-lg-start">
-                        <p class="font-family-primary fw-semibold text-md lh-27 text-white pt-133">Welcome to Nigalya
+                        <p class="font-family-primary fw-semibold text-md lh-27 text-white">Welcome to Nigalya
                         </p>
                     </div>
                     <div class="d-flex justify-content-center justify-content-lg-start text-center text-lg-start">
@@ -81,8 +81,7 @@
                     </div>
                     <div class="d-flex justify-content-center justify-content-lg-start text-center text-lg-start">
                         <p class="font-family-primary text-white text-sm fw-semibold lh-22 pt-12">The first-choose-to
-                            earn
-                            on the blockchain </p>
+                            earn on the blockchain </p>
                     </div>
                     <div class="parent d-flex justify-content-center justify-content-lg-start">
                         <button class="font-family-primary btn-1 text-white fw-semibold text-sm lh-22 ">JOIN
@@ -134,13 +133,13 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center mt-54">
-                <p class="font-family-primary fw-semibold text-md lh-35 text-white text-center max-w-946">Nigalya offers
+                <p class="font-family-primary fw-semibold text-md lh-35 text-white text-center max-w-946 mb-0">Nigalya offers
                     a NFT collection with infinitely diverse very high standards elements around your Panda
-                    Hero: headwear, drone companions, wings, weaponized items, and more.</p>
+                    Hero: headwear, drone companions, wings, weaponized items, and more.<br><br>
+                    Be part of the community now by choosing your avatar hosted on the IPFS.</p>
             </div>
             <div class="d-flex justify-content-center">
-                <p class="font-family-primary fw-semibold text-md lh-35 text-center text-white">Be part of the community
-                    now by choosing your avatar hosted on the IPFS.</p>
+                <p class="font-family-primary fw-semibold text-md lh-35 text-center text-white"></p>
             </div>
         </div>
     </section>
@@ -148,7 +147,7 @@
     <footer class="faq d-flex align-items-center justify-content-center bg-img-3">
         <div class="container max-w-1140">
             <div class="d-flex align-items-center justify-content-center justify-content-lg-start">
-                <div class="font-family-primary fw-900 text-xl lh-109 text-white mt-63">FAQs</div>
+                <div class="font-family-primary fw-900 text-xl lh-109 text-white pt-63 pb-46">FAQs</div>
             </div>
             <div class="row">
                 <div class="col-12 col-lg-7">
@@ -165,7 +164,7 @@
                             <div id="collapseOne" class="accordion-collapse collapse"
                                 data-bs-parent="#accordionExample">
                                 <div
-                                    cl ass="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
+                                    class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
                                     Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
                                     odio urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam
                                     arcu.
@@ -176,7 +175,7 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header">
                                 <button
-                                    class="accordion-button collaps ed font-family-primary fw-semibold text-small lh-19 text-white"
+                                    class="accordion-button font-family-primary fw-semibold text-small lh-19 text-white"
                                     type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                     aria-expanded="false" aria-controls="collapseTwo">
                                     Pellentesque mauris, est at magna. Vel curabitur amet sit id. Enim.
